# ShapeColorSoundBomb

./: Cargo.toml  LICENSE  README.md
assets/models/: bomb.glb  button_area.glb  circle.glb  cuboid.glb  defused_text.glb  diamond.glb  game_over.glb  plus.glb  pyramid.glb  x.glb
src/: audio_server.rs  camera.rs  game.rs  main.rs  screen.rs  ui_theme.rs
src/audio_server/: components.rs
src/game/: bomb.rs  cell_line.rs  game_board.rs  game_grid.rs  input_handler.rs  points.rs
src/screen/: components.rs  credits.rs  menu.rs  options.rs  systems.rs
web/: index.html  style.css
